# OpenElectricityDataPlatform

./: .dockerignore  .env.example  .gitignore  .renderignore  CLAUDE.md  DATA_SOURCES.md  Dockerfile  PLAN.md  README.md  config.example.yaml  koyeb.yaml  pyproject.toml  render.yaml  requirements.txt
.claude/: CLAUDE.md
data/metadata/: regions.json  sources.json
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: EmptyState.tsx  ErrorState.tsx  LoadingProgress.tsx  MapLayerControl.tsx  SourceInfo.tsx  TimeSelector.tsx
frontend/src/constants/: index.ts
frontend/src/contexts/: ApiKeyContext.tsx  LoadingContext.tsx
frontend/src/pages/: About.tsx  Catalog.tsx  DataExplorer.tsx  DataQuality.tsx  Settings.tsx
frontend/src/utils/: format.ts
scripts/: claude-reset.sh  generate_sample_data.py  migrate_cache.py  preprocess_data.py
scripts/zenodo/: download_from_zenodo.py  upload_to_zenodo.py
src/openenergydata/: __init__.py
src/openenergydata/api/: __init__.py  main.py
src/openenergydata/api/routers/: __init__.py  data_quality.py  exports.py  hydropower.py  (+7 more)
src/openenergydata/config/: __init__.py  data_paths.py  regions.py  settings.py
src/openenergydata/data/: __init__.py  cache.py  loader.py  quality.py  zenodo.py
src/openenergydata/export/: __init__.py  csv_export.py  geojson_export.py
src/openenergydata/treatments/: __init__.py  representative_days.py  timeseries_utils.py
src/openenergydata/viz/: __init__.py  charts.py  maps.py
tests/: __init__.py
(+7 files in other folders)
